# util

./: CMakeLists.txt  Doxyfile.in  README.textile  start_once_mixin.cpp  start_once_mixin.hpp  util.sln  util_test.cpp  util_test.vcxproj  util_test.vcxproj.filters
ansi/: colors.cpp  colors.hpp  colors_tests.cpp
ansi/_test/: colors_test.cpp
asio/: buffer_queue.cpp  buffer_queue.hpp
buffer/: appendable_buffer.cpp  appendable_buffer.hpp  appendable_buffer_tests.cpp  buffer_queue.cpp  buffer_queue.hpp  buffer_queue_tests.cpp  shared_buffer.hpp
console/: auto_mode.hpp  console.cpp  console.hpp  mode.cpp
console/_test/: console_test.cpp
crypto/: sha1.cpp  sha1.hpp  sha1_hmac.cpp  sha1_hmac.hpp  shannon.cpp  shannon.hpp
crypto/_detail/: sha1.c  sha1.h  shannon_impl.cpp  shannon_impl.h
encoding/: base64.cpp  base64.hpp
endian/: byteswap.hpp  byteswap_tests.cpp  endian.hpp
examples/ansi/: color_example.cpp
examples/memory/: memstream.cpp  read.cpp  read_example.cpp
iostream/: imemstream.cpp  imemstream_tests.cpp  readfile.cpp  readfile.hpp  writefile.cpp  writefile.hpp
math/: round_up.hpp
memory/: memstream.cpp  memstream.hpp  memstream_tests.cpp  read.hpp  read_tests.cpp  write.hpp
platform/: environment.cpp  environment.hpp
posix/: fd.cpp  fd.hpp  pipe.cpp  pipe.hpp
process/: child.cpp  child.hpp  parent.cpp  parent.hpp  stream_id.cpp  stream_id.hpp
process/_detail/: spawner.cpp  spawner.hpp  spawner_posix_spawn.hpp
process/_test/: process_tests.cpp
stl/: list.hpp  list_tests.cpp  vector.hpp  vector_tests.cpp
string/: expand.cpp  expand.hpp  expand_tests.cpp  zero_teminated.hpp  zero_terminated.cpp  zero_terminated_tests.cpp
stupidtest/: stupidtest.cpp  stupidtest.hpp  stupidtest_tests.cpp
thread/: async_result.hpp
type_traits/: remove_cv_ref.hpp
util_buffer/: util_buffer.vcxproj  util_buffer.vcxproj.filters
util_console/: util_console.vcxproj  util_console.vcxproj.filters
util_crypto/: util_crypto.vcxproj  util_crypto.vcxproj.filters
util_encoding/: util_encoding.vcxproj  util_encoding.vcxproj.filters
util_endian/: util_endian.vcxproj  util_endian.vcxproj.filters
util_example_memory_memstream/: util_example_memory_memstream.vcxproj  util_example_memory_memstream.vcxproj.filters
util_example_memory_read/: util_example_memory_read.vcxproj  util_example_memory_read.vcxproj.filters
util_iostream/: util_iostream.vcxproj  util_iostream.vcxproj.filters
util_memory/: util_memory.vcxproj  util_memory.vcxproj.filters
util_platform/: util_platform.vcxproj  util_platform.vcxproj.filters
util_posix/: util_posix.vcxproj  util_posix.vcxproj.filters
util_string/: util_string.vcxproj  util_string.vcxproj.filters
